infra/gateway/gw-puppetmaster.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: puppetmaster
  namespace: gateway
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.2.225
  listeners:
    - protocol: HTTPS
      port: 443
      name: argocd-https
      hostname: argocd.roguestarr.com
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-roguestarr-com-tls
            namespace: gateway
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: roguestarr.com
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-roguestarr-com-tls
            namespace: gateway
      allowedRoutes:
        namespaces:
          from: All
#    - protocol: HTTPS
#      port: 443
#      name: https-wildcard
#      hostname: "*.stonegarden.dev"
#      tls:
#        certificateRefs:
#          - kind: Secret
#            name: cloudflare-cert
#      allowedRoutes:
#        namespaces:
#          from: All
